gccida/g2/ix86_expand_fp_movcc
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/ix86_expand_fp_movcc/src/i386.c:8885:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code v2; // ebp 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/ix86_expand_fp_movcc/src/i386.c:8903:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code v21; // edi 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/ix86_expand_fp_movcc/src/i386.c:8904:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code v22; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/ix86_expand_fp_movcc/src/i386.c:8910:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code v28; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/ix86_expand_fp_movcc/src/i386.c:8949:26: error: use of undeclared identifier 'machine_mode'
*operands = force_reg( ( machine_mode)*( ( unsigned __int8 *)*operands + 2), *operands); 
                         ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/ix86_expand_fp_movcc/src/i386.c:8951:20: error: use of undeclared identifier 'machine_mode'
v15 = force_reg( ( machine_mode)*( ( unsigned __int8 *)*operands + 2), v15); 
                   ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/ix86_expand_fp_movcc/src/i386.c:8961:26: error: use of undeclared identifier 'machine_mode'
*operands = force_reg( ( machine_mode)*( ( unsigned __int8 *)*operands + 2), *operands); 
                         ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/ix86_expand_fp_movcc/src/i386.c:8963:20: error: use of undeclared identifier 'machine_mode'
v15 = force_reg( ( machine_mode)*( ( unsigned __int8 *)*operands + 2), v15); 
                   ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/ix86_expand_fp_movcc/src/i386.c:8993:44: error: use of undeclared identifier 'rtx_code'; did you mean 'rtx_cost'?
v28 = reverse_condition_maybe_unordered( ( rtx_code)*( _WORD *)v24); 
                                           ^~~~~~~~
                                           rtx_cost
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/ix86_expand_fp_movcc/src/rtl.h:1787:12: note: 'rtx_cost' declared here
extern int rtx_cost                     PARAMS ((rtx, enum rtx_code));
           ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/ix86_expand_fp_movcc/src/i386.c:8993:53: error: invalid operands to binary expression ('int (rtx, enum rtx_code)' (aka 'int (struct rtx_def *, enum rtx_code)') and 'uint16 *' (aka 'unsigned short *'))
v28 = reverse_condition_maybe_unordered( ( rtx_code)*( _WORD *)v24); 
                                         ~~~~~~~~~~~^~~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/ix86_expand_fp_movcc/src/i386.c:9036:22: error: use of undeclared identifier 'machine_mode'
v34 = gen_reg_rtx( ( machine_mode)*( ( unsigned __int8 *)*operands + 2)); 
                     ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/ix86_expand_fp_movcc/src/i386.c:9045:22: error: use of undeclared identifier 'machine_mode'
tmp = gen_reg_rtx( ( machine_mode)*( ( unsigned __int8 *)*operands + 2)); 
                     ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/ix86_expand_fp_movcc/src/i386.c:9055:39: error: use of undeclared identifier 'machine_mode'
v8 = gen_rtx_fmt_eee( IF_THEN_ELSE, ( machine_mode)*( ( unsigned __int8 *)*operands + 2), v5, v7, operands[3]); 
                                      ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/ix86_expand_fp_movcc/src/i386.c:9062:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)*( ( unsigned __int8 *)*operands + 2), 
  ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/ix86_expand_fp_movcc/src/i386.c:9073:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)*( ( unsigned __int8 *)*operands + 2), 
  ^
15 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/ix86_expand_fp_movcc/src/obj/i386.o] Error 1
